--- a/cpp2py.ipynb
+++ b/cpp2py.ipynb
@@ -18,8 +18,6 @@
       "source": [
         "# Allgemeines\n",
         "\n",
-        "Test\n",
-        "\n",
         "Ziel des Notebooks ist ein leichter Einstieg in **Python** anhand von Beispielen, falls sie bereits mit **C++** vertraut sind.\n",
         "\n",
         "Ein weiteres Ziel ist es, hierbei auch das Verständnis für die Konzepte von C++ durch Wiederholung und Vergleich zu vertiefen.\n",
@@ -44,8 +42,8 @@
         "- Zum Ausführen einer Zelle mit Programmcode entweder auf das Dreieck-Icon klicken, oder *Shift+Enter*.\n",
         "- In Jupyter Notebooks gibt es auch ein Menu (meist ganz oben), mit dem Sie z.B. die Ausführung neu starten können.\n",
         "- Ein Inhaltsverzeichnis/ eine Gliederung des Notebooks wird (meist links daneben) auch angezeigt.\n",
-        "- Sie können sowohl die Zellen mit Text (in einfacher Markdown-Syntax), also aus die Zellen mit Code editieren; mit Doppelklick.\n",
-        "- Wenn sie damit fertig sind: Rechts oben ein Haken d'ran, oder *Ctrl+Enter*"
+        "- Sie können sowohl die Zellen mit Text (in einfacher Markdown-Syntax), als auch die Zellen mit Code editieren; mit Doppelklick.\n",
+        "- Wenn sie damit fertig sind: Rechts oben ein Haken dran, oder *Ctrl+Enter*"
       ]
     },
     {
@@ -61,15 +59,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "NgJSWXEf1ZKf",
-        "outputId": "48234f72-b50a-4254-abdb-10e115816395"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "277f0877-e838-40d7-b94b-55b0f1a869a1"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Vorab ein kurzer Gruss von Python-Code, dem eingebauten 'Favoriten' bei Jupyter Notebooks.\n"
           ]
@@ -91,11 +92,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "oY8tNFASMN1I"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oY8tNFASMN1I",
+        "outputId": "ee07c8b4-b32a-47b2-9a51-6ae6e69176a0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n",
+            "Zur Überprüfung die Inhalt des 'Laufwerks' ausgeben:\n",
+            "total 9\n",
+            "drwx------ 2 root root 4096 Apr  2  2022  backupDir\n",
+            "drwx------ 2 root root 4096 Oct 12 08:53 'Colab Notebooks'\n",
+            "-rw------- 1 root root  182 Oct 12 09:12 'Unbenanntes Dokument.gdoc'\n"
+          ]
+        }
+      ],
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
@@ -120,11 +138,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "fyVDClX4P3WX"
+        "id": "fyVDClX4P3WX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2cb70abb-3789-453d-bc85-81c12bf1b4f2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "*** 1.)  Test if NVIDIA(R)-cuda-compiler-driver is availabe...\n",
+            "nvcc: NVIDIA (R) Cuda compiler driver\n",
+            "Copyright (c) 2005-2022 NVIDIA Corporation\n",
+            "Built on Wed_Sep_21_10:33:58_PDT_2022\n",
+            "Cuda compilation tools, release 11.8, V11.8.89\n",
+            "Build cuda_11.8.r11.8/compiler.31833905_0\n",
+            "*** 2.) Install extension to run nvcc ...\n",
+            "Collecting git+https://github.com/andreinechaev/nvcc4jupyter.git\n",
+            "  Cloning https://github.com/andreinechaev/nvcc4jupyter.git to /tmp/pip-req-build-w6q4bogi\n",
+            "  Running command git clone --filter=blob:none --quiet https://github.com/andreinechaev/nvcc4jupyter.git /tmp/pip-req-build-w6q4bogi\n",
+            "  Resolved https://github.com/andreinechaev/nvcc4jupyter.git to commit 0a71d56e5dce3ff1f0dd2c47c29367629262f527\n",
+            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Building wheels for collected packages: NVCCPlugin\n",
+            "  Building wheel for NVCCPlugin (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for NVCCPlugin: filename=NVCCPlugin-0.0.2-py3-none-any.whl size=4293 sha256=0c4bfff332db4d080be62198d2dc6fd5dcaa7e4a798e539fcac1b7d8751bfeb0\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-el_r0njz/wheels/a8/b9/18/23f8ef71ceb0f63297dd1903aedd067e6243a68ea756d6feea\n",
+            "Successfully built NVCCPlugin\n",
+            "Installing collected packages: NVCCPlugin\n",
+            "Successfully installed NVCCPlugin-0.0.2\n",
+            "*** 3.) Load extension using a 'line magic %' command....\n",
+            "created output directory at /content/src\n",
+            "Out bin /content/result.out\n"
+          ]
+        }
+      ],
       "source": [
         "!echo \"*** 1.)  Test if NVIDIA(R)-cuda-compiler-driver is availabe...\"\n",
         "!nvcc --version\n",
@@ -148,17 +199,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "GDXqDlB-PnvJ",
-        "outputId": "3bf47bc0-ccaa-432a-8fe4-ea18fd00911c"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c66798ce-88ba-49fd-d5bf-bd353e91f09d"
       },
       "outputs": [
         {
-          "name": "stderr",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "UsageError: Cell magic `%%cu` not found.\n"
+            "Hello from C++ inside jupyter notebook!\n",
+            "\n"
           ]
         }
       ],
@@ -252,15 +307,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "y2JcrxkxMN1Q",
-        "outputId": "cc2c03bd-def1-4ae4-f0e1-cd728cd664df"
+        "outputId": "0baad101-defe-4252-8882-828e3c11d360"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Hello from anywhere in the file!\n",
             "Hello from Python-Script (((also from Jupyter Notebook)))!\n"
@@ -287,16 +345,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "trusted": true,
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "OOPb_ujLMN1Q",
-        "outputId": "bce69e28-1d48-4fe6-8a7b-a584b2bce104"
+        "outputId": "9da0f750-73b6-4479-a3f6-fe478fb00822"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Hello without semicolon\n",
             "Hello with semicolon\n",
@@ -341,15 +402,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "VNngamJ9MN1R",
-        "outputId": "003121b5-fa2f-4fd3-b221-e820a6166dd8"
+        "outputId": "89b5aff7-120f-4e19-af2f-0f07f59b5ea8"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "positiv\n",
             "big\n",
@@ -430,11 +494,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
-        "id": "cFuCH4ZVMN1T"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cFuCH4ZVMN1T",
+        "outputId": "161dae16-3f4c-45f9-9fe0-7d53f3838a6e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please enter a number!\n",
+            "The numer is: 0\n",
+            "Please enter a string!\n",
+            "The string is: \n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "%%cu\n",
         "#include <iostream>\n",
@@ -443,10 +523,10 @@
         "int main() {\n",
         "    cout << \"Please enter a number!\"<<endl;\n",
         "    int number;\n",
-        "    cin >> numer;\n",
+        "    cin >> number;\n",
         "    cout << \"The numer is: \"  << number << endl;\n",
         "\n",
-        "    cout << \"Please enter a string!\"<<endl;\";\n",
+        "    cout << \"Please enter a string!\"<<endl;\n",
         "    string str_input;\n",
         "    cin >> str_input;\n",
         "    cout << \"The string is: \" << str_input << endl;\n",
@@ -469,21 +549,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "tags": [],
         "trusted": true,
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "30yAgZ37MN1U",
-        "outputId": "0379d8a6-6645-4a87-a8bc-a2c31584a1b1"
+        "outputId": "c5e7e53b-9641-41fd-9861-9787c244fd2c"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "The string is:  22\n",
-            "The number is:  2222\n",
-            "The number is:  2222\n"
+            "Please enter a string!\n",
+            "hello\n",
+            "The string is:  hello\n",
+            "Please enter a number: 10\n",
+            "The number is:  10\n",
+            "Please enter a number: 12\n",
+            "The number is:  12\n"
           ]
         }
       ],
